small css fix of aligning the text

--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ h2, label, input { color: rgba(12, 14, 90, 0.949); }
 
 /* HOMEPAGE */
 .start .page__container--left{ background:transparent; background-image:url(./assets/img/first_page_paper.png); border:unset; box-shadow:unset; -moz-box-shadow:unset; -webkit-box-shadow:unset; background-repeat: no-repeat; background-position-y: bottom; padding:0; margin:0;}
-.start .page__container--left > * {margin:0; max-width:400px; padding-right:70px; padding-top:35px; text-align:left; line-height:32px}
+.start .page__container--left > * {margin:0; max-width:400px; padding-right:90px; padding-top:35px; text-align:left; line-height:32px}
 .start .page__container--left > b {margin-top:-3px;}
 .start .page__container--right{ box-sizing: border-box; border:unset; background:grey; background-image:url(./assets/img/front_book_cover.jpg); background-position: right top; color: white; -webkit-box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); -moz-box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); }
 .start .page__container--right::before{ display: block; content:''; left:-32px; top:-50px; transform:scale(.8); position:absolute; width:85px; height:115%; background-image:url(./assets/img/front_book_ring.png);  }
